; ModuleID = '/home/carl/AnghaBench/git/ewah/extr_ewah_bitmap.c_buffer_grow.c'
source_filename = "/home/carl/AnghaBench/git/ewah/extr_ewah_bitmap.c_buffer_grow.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.ewah_bitmap = type { i64, i64, i64 }

@llvm.used = appending global [1 x i8*] [i8* bitcast (void (%struct.ewah_bitmap*, i64)* @buffer_grow to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @buffer_grow(%struct.ewah_bitmap* %0, i64 %1) #0 {
  %3 = alloca %struct.ewah_bitmap*, align 8
  %4 = alloca i64, align 8
  %5 = alloca i64, align 8
  store %struct.ewah_bitmap* %0, %struct.ewah_bitmap** %3, align 8
  store i64 %1, i64* %4, align 8
  %6 = load %struct.ewah_bitmap*, %struct.ewah_bitmap** %3, align 8
  %7 = getelementptr inbounds %struct.ewah_bitmap, %struct.ewah_bitmap* %6, i32 0, i32 2
  %8 = load i64, i64* %7, align 8
  %9 = inttoptr i64 %8 to i32*
  %10 = load %struct.ewah_bitmap*, %struct.ewah_bitmap** %3, align 8
  %11 = getelementptr inbounds %struct.ewah_bitmap, %struct.ewah_bitmap* %10, i32 0, i32 1
  %12 = load i64, i64* %11, align 8
  %13 = inttoptr i64 %12 to i32*
  %14 = ptrtoint i32* %9 to i64
  %15 = ptrtoint i32* %13 to i64
  %16 = sub i64 %14, %15
  %17 = sdiv exact i64 %16, 4
  store i64 %17, i64* %5, align 8
  %18 = load %struct.ewah_bitmap*, %struct.ewah_bitmap** %3, align 8
  %19 = getelementptr inbounds %struct.ewah_bitmap, %struct.ewah_bitmap* %18, i32 0, i32 0
  %20 = load i64, i64* %19, align 8
  %21 = load i64, i64* %4, align 8
  %22 = icmp uge i64 %20, %21
  br i1 %22, label %23, label %24

23:                                               ; preds = %2
  br label %43

24:                                               ; preds = %2
  %25 = load i64, i64* %4, align 8
  %26 = load %struct.ewah_bitmap*, %struct.ewah_bitmap** %3, align 8
  %27 = getelementptr inbounds %struct.ewah_bitmap, %struct.ewah_bitmap* %26, i32 0, i32 0
  store i64 %25, i64* %27, align 8
  %28 = load %struct.ewah_bitmap*, %struct.ewah_bitmap** %3, align 8
  %29 = getelementptr inbounds %struct.ewah_bitmap, %struct.ewah_bitmap* %28, i32 0, i32 1
  %30 = load i64, i64* %29, align 8
  %31 = load %struct.ewah_bitmap*, %struct.ewah_bitmap** %3, align 8
  %32 = getelementptr inbounds %struct.ewah_bitmap, %struct.ewah_bitmap* %31, i32 0, i32 0
  %33 = load i64, i64* %32, align 8
  %34 = call i32 @REALLOC_ARRAY(i64 %30, i64 %33)
  %35 = load %struct.ewah_bitmap*, %struct.ewah_bitmap** %3, align 8
  %36 = getelementptr inbounds %struct.ewah_bitmap, %struct.ewah_bitmap* %35, i32 0, i32 1
  %37 = load i64, i64* %36, align 8
  %38 = load i64, i64* %5, align 8
  %39 = udiv i64 %38, 4
  %40 = add i64 %37, %39
  %41 = load %struct.ewah_bitmap*, %struct.ewah_bitmap** %3, align 8
  %42 = getelementptr inbounds %struct.ewah_bitmap, %struct.ewah_bitmap* %41, i32 0, i32 2
  store i64 %40, i64* %42, align 8
  br label %43

43:                                               ; preds = %24, %23
  ret void
}

declare dso_local i32 @REALLOC_ARRAY(i64, i64) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
